syntax = "proto3";
package user_stats;

import "google/protobuf/timestamp.proto";
import "messages.proto";

service UserStats {
  rpc Query(QueryRequest) returns (stream User) {}
  rpc RawQuery(RawQueryRequest) returns (stream User) {}
}